Fixed opacity change on mobile homepage

--- a/index.css
+++ b/index.css
@@ -251,7 +251,6 @@ keyframes notice {
     width: 400px;
     margin-right: -200px;
     margin-bottom: -200px;
-    opacity: .1;
     border-radius: 200px;
   }
 }
